# yrarlib

./: .gitignore  AGENTS.md  README.md  install.sh  run.sh
app/: README.md  anna_integration.py  html_generator.py  indexer.py  pyproject.toml  server.py
app/templates/: anna_search_results.html  base.html  index.html  loading.html  local_search_results.html  message.html
app/tests/: test_anna_integration.py
